[javadoc] Make max width configurable for DocRenderer
IDEA-278887

GitOrigin-RevId: 58359bad4b21240577fd332260bc6445a31bb632